<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:background="@drawable/backdrop">

    <ImageView
        android:id="@+id/im_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="433dp"
        android:contentDescription="@string/splash_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/wall" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:elevation="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/lets_build_walls"
        android:textColor="#D1D0D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_logo" />

    <TextView
        android:id="@+id/txt_product"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="340dp"
        android:text="@string/digital_turbine_test_product"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#D1D0D0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />


</androidx.constraintlayout.widget.ConstraintLayout>